# bittorrent-rust

./: .readthedocs.yml  Cargo.toml  pyproject.toml
.github/workflows/: CI.yml  python_bindings.yml
crates/bencode/src/: lib.rs  main.rs
crates/bencode/src/decoders/: _bencode.rs  bencode.rs  dictionary.rs  integer.rs  list.rs  mod.rs  string.rs
crates/bencode/src/dispatcher/: bdecode.rs  bencode.rs  mod.rs
crates/bencode/src/encoders/: _bencode.rs  bencode.rs  dictionary.rs  integer.rs  list.rs  mod.rs  string.rs
crates/bencode/src/enums/: bencode.rs
crates/python_bindings/: Cargo.toml  main.py  pyproject.toml
crates/python_bindings/src/: lib.rs
crates/python_bindings/tests/: test_parity.py
crates/wasm_bindings/: .gitignore  Cargo.toml  minify.ts  package-lock.json  package.json  tsconfig.json
crates/wasm_bindings/src/: lib.rs
crates/wasm_bindings/tests/: parity.test.ts
docs/: docusaurus.config.ts  pyproject.toml  zensical.toml
docs/site/: index.html  search.json
docs/site/architecture/: index.html
docs/site/bindings/python/: index.html
docs/site/bindings/webassembly/: index.html
docs/src/: architecture.md  index.md
docs/src/bindings/: python.md  webassembly.md
