[workspace.package]
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*"]

[profile.release]
opt-level = "z"   # "z" is for size, "3" is for max speed; use "3" for max speed
lto = true        # Fat LTO for absolute best performance
codegen-units = 1 # Single codegen unit for cross-crate optimization
debug = false     # Remove debug info to optimize runtime
panic = "abort"   # Optional: smaller binaries and better performance
strip = "symbols" # Optional: strip symbols for smaller binary
