[project]
name = "bencode_rs"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = ["maturin>=1.10.2"]
