[project]
name = "bencode_rust"
dynamic = ["version"]
description = "A modern bencode parser written from scratch for the next generation of torrent streaming"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = ["maturin>=1.10.2"]
test = ["bencode-py>=4.0.0", "pytest>=8.3.5"]
